--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "rayoo_backend",
+  "name": "elige-lo-saludable-basico",
   "version": "1.0.0",
-  "description": "",
+  "description": "Versión básica del juego educativo Elige lo Saludable",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "express-rate-limit": "^7.5.1",
-    "helmet": "^8.1.0",
-    "mysql2": "^3.14.1"
+    "express": "^4.18.2"
   }
 }
